--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>engineer.maxbarraclough.txtshuffle.MainApp</mainClass>
+        <mainClass>engineer.maxbarraclough.txtshuffle.gui.MainApp</mainClass>
     </properties>
 
     <organization>
