--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                         </goals>
                         <configuration>
                             <executable>${java.home}/bin/java</executable>
-                            <commandlineArgs>${runfx.args}</commandlineArgs>
+                            <commandlineArgs>-ea ${runfx.args}</commandlineArgs>
                         </configuration>
                     </execution>
                 </executions>  
